fixed layout issue in IE6
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@3031 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/css/backend-style.css
+++ b/typo3/css/backend-style.css
@@ -77,7 +77,6 @@ Description : styles the TYPO3 backend
 /* ----- logged in user ----- */
 
 #username {
-	height: 13px;
 	padding-top: 4px;
 }
 
